[package]
name = "fttui"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }

# PURE RUST TLS!
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
color-eyre = "0.6"
chrono = "0.4.44"
